# libdsv

./: .gitattributes  .gitignore  AUTHORS  COPYING  ChangeLog  Makefile.am  configure.ac  dsv_grammar.yy  dsv_parser.cc  dsv_parser.h  libdsv.pc.in  parser_state.h  parser_state_detail.h
docs/: Doxyfile  Makefile.am
docs/source_doc/: mainpage.doxy
libdsv/: Makefile.am
libdsv/src/: Makefile.am  basic_scanner.h  bytesequence_compiler.h  dsv_grammar.yy  dsv_parser.cc  dsv_parser_high.cc  dsv_parser_low.cc  dsv_rules.ll  equiv_bytesequence.h  file_parser.cc  file_parser.h  parse_operations.h  parser.h  parser_state.cc  parser_state.h  parser_state_detail.h  read_bytes.h  rfc4180.txt  scanner_state.h
libdsv/tests/: Makefile.am  api_RFC4180_parse_test.cc  api_RFC4180_permissive_parse_test.cc  api_alt_delimiter_test.cc  api_alt_parse_test.cc  api_column_count_test.cc  api_defaults_parse_suite.cc  api_detail.cc  api_detail.h  api_operations_object_suite.cc  api_parse_test.cc  api_parser_defaults_suite.cc  api_parser_high_object_suite.cc  api_parser_log_suite.cc  api_parser_low_object_suite.cc  api_parser_object_suite.cc  compile_bytesequence_test.cc  create_test.cc  equiv_bytesequence_test.cc  parse_test.cc  scanner_perf_test.cc  scanner_test.cc  test_detail.h
libdsv/tests/data/: multi_empty_field_quoted_rfc4180_charset_crlf.dsv  multi_empty_field_rfc4180_charset_crlf.dsv  multi_empty_line_single_field_quoted_rfc4180_charset_crlf.dsv  multi_empty_line_single_field_rfc4180_charset_crlf.dsv  multifield_quoted_rfc4180_charset_crlf.dsv  multifield_rfc4180_charset.dsv  multifield_rfc4180_charset_crlf.dsv  multiline_permfield_rfc4180_charset_crlf.dsv  multiline_single_field_quoted_rfc4180_charset.dsv  multiline_single_field_quoted_rfc4180_charset_crlf.dsv  multiline_single_field_rfc4180_charset.dsv  multiline_single_field_rfc4180_charset_crlf.dsv  single_field_quoted_rfc4180_charset_crlf.dsv  single_field_rfc4180_charset.dsv  single_field_rfc4180_charset_crlf.dsv  single_field_rfc4180_charset_lf.dsv
tests/: Makefile.am  master_suite.cc  test_wrapper.sh
